--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@ Intruduccion a HTML 5 y CSS3-->
 
 <div class="navbar">
     <section> <!--informacion de la empresa-->
-        <a href="#categoriauno">mujer</a> 
-        <a href="#categoriados">hombre</a> 
-        <a href="#categoriatres">niñas</a> 
-        <a href="#categoriacuatro">niños</a> 
-        <a href="#categoriacinco">zapatos</a> 
-        <a href="#categoriaseis">mascotas</a>
+        <a href="#categoria">mujer</a> 
+        <a href="#categoria">hombre</a> 
+        <a href="#categoria">niñas</a> 
+        <a href="#categoria">niños</a> 
+        <a href="#categoria">zapatos</a> 
+        <a href="#categoria">mascotas</a>
     </section>
 </div>
 
